--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DB_PORT =
 DB_NAME = 
 DB_USER = 
 DB_PASSWORD = 
+
+AWS_REGION = 
+AWS_ACCESS_KEY_ID = 
+AWS_SECRET_ACCESS_KEY = 
+AWS_BUCKET_NAME = 
