--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,5 +5,5 @@ global:
 scrape_configs:
   - job_name: 'app'
     static_configs:
-      - targets: ['localhost:8000']
+      - targets: ['app:8000']
     metrics_path: '/api/metrics'
