--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "setup:dynamodb": "ts-node src/scripts/dynamodb/create-tables.ts",
+    "dynamodb-admin": "DYNAMO_ENDPOINT=http://localhost:8001 AWS_REGION=us-east-1 PORT=8002 dynamodb-admin"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.797.0",
     "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/lib-dynamodb": "^3.797.0",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
@@ -33,6 +37,8 @@
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.5.0",
     "joi": "^17.13.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -43,6 +49,7 @@
     "rxjs": "^7.8.2",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.20",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -51,6 +58,7 @@
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
@@ -58,6 +66,7 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "dynamodb-admin": "^5.1.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.3",
