--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.797.0",
     "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-sqs": "^3.797.0",
     "@aws-sdk/lib-dynamodb": "^3.797.0",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
@@ -40,6 +41,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
+    "nest-commander": "^3.17.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
